# zex-sdk

./: .gitignore  README.md  changelog.md  pyproject.toml
.github/workflows/: ci.yml
src/zex/sdk/: order.py
src/zex/sdk/client/: __init__.py  async_client.py  signing_visitor.py  signing_visitor_dev.py  signing_visitor_main.py
src/zex/sdk/clients/: __init__.py  async_client.py
src/zex/sdk/data_types/: __init__.py  asset.py  cancel_order_request.py  deposit_request.py  order.py  place_order_request.py  place_order_result.py  trade_info.py  transfer.py  withdraw.py  withdraw_request.py
src/zex/sdk/websocket/: __init__.py  base_socket.py  execution_report_socket.py  socket_message.py  zex_socket_manager.py
tests/client/: test_async_client.py
tests/system/: conftest.py  test_place_orders.py
tests/unit/: conftest.py
tests/unit/client/: test_async_client.py
tests/unit/websocket/: test_base_socket.py
tests/utils/: __init__.py  mock_zex_server.py
